rabbitmq/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: messaging
    app.kubernetes.io/part-of: infrastructure
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: ""
