rabbitmq/13-management-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: management
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
  - name: management
    port: 15672
    targetPort: management
    protocol: TCP
  - name: management-ssl
    port: 15671
    targetPort: management-ssl
    protocol: TCP
  selector:
    app.kubernetes.io/name: rabbitmq
