rabbitmq/60-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-prometheus
  namespace: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: monitoring
spec:
  type: ClusterIP
  ports:
  - name: prometheus
    port: 15692
    targetPort: prometheus
    protocol: TCP
  - name: prometheus-ssl
    port: 15691
    targetPort: prometheus-ssl
    protocol: TCP
  selector:
    app.kubernetes.io/name: rabbitmq
